--- a/accessible/index.html
+++ b/accessible/index.html
@@ -13,7 +13,7 @@ groups:
    aria-label="Skip to navigation menu"
    alt="Skip to navigation menu"
    tabindex="1"
-   style="position: absolute;width: 100vw; left: 0; top: -100px; background-color: #f79d00; padding: 10px; z-index: 100;">
+   style="position: absolute;width: 100vw; left: 0; top: -100px; background-color: #f79d00; padding: 10px; z-index: 100; color: #000">
     Skip to Navigation
 </a>
 
@@ -53,7 +53,8 @@ groups:
                 <li role="menuitem">
                     {{ group }}
                     <ul role="menu">
-                        {% for location in site.locations %}
+                        {% assign locations = site.locations | sort: 'order' %}
+                        {% for location in locations %}
                             {% if location.group == slug_name %}
                                 <li role="menuitem"><a href="#{{ location.name | slugify }}" aria-label="{{ location.name }}" alt="{{ location.name }}">{{ location.name }}</a></li>
                             {% endif %}
@@ -70,7 +71,8 @@ groups:
     <div class="row">
         <div class="co1" aria-labelledby="{{slug_name}}Title">
             <h2 id="{{slug_name}}Title" class="mt-5">{{ group }}</h2>
-            {% for location in site.locations | sort: "order" %}
+            {% assign locations = site.locations | sort: 'order' %}
+            {% for location in locations %}
                 {% if location.group == slug_name %}
                     {% include location.html name=location.name image=location.image content=location.content %}
                 {% endif %}
